<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_dwa_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hussainkanc52@gmail.com">hussain</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_util</depend>
  <depend>nav_2d_utils</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugin/dwa_plugin.xml"/>
  </export>
</package>
